# lazyeye

./: .gitignore  LICENSE  README.md
lazyeye/: MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
lazyeye/docs/: conf.py  index.rst
lazyeye/docs/lazyeye/: index.rst
lazyeye/lazyeye/: cfht_test.py  image_test.py  lazyeye_core.py  papaQ.py
lazyeye/lazyeye/example_subpkg/: setup_package.py
